Now with annotations

--- a/web/viewer.html
+++ b/web/viewer.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <!--
 Copyright 2012 Mozilla Foundation
 
@@ -44,6 +44,8 @@ See https://github.com/adobe-type-tools/cmap-resources
 
     <script src="debugger.js"></script>
     <script src="viewer.js"></script>
+
+<script async defer src="https://hypothes.is/embed.js"></script>
 
   </head>
 
